baseurl naming updates
