# src/docs/swagger.yaml
@@ -28,7 +28,7 @@ info:
   title: Order Application
   version: "1.0"
 paths:
-  /order:
+  /orders:
     get:
       consumes:
       - application/json
@@ -57,7 +57,7 @@ paths:
       summary: Create a order
       tags:
       - order
-  /order/{id}:
+  /orders/{id}:
     get:
       consumes:
       - application/json
@@ -78,7 +78,7 @@ paths:
       summary: Get order
       tags:
       - order
-  /order/cancel/{id}:
+  /orders/cancel/{id}:
     put:
       consumes:
       - application/json
@@ -99,7 +99,7 @@ paths:
       summary: Cancel order
       tags:
       - order
-  /order/pay/{id}:
+  /orders/pay/{id}:
     put:
       consumes:
       - application/json
@@ -120,7 +120,7 @@ paths:
       summary: Pay order
       tags:
       - order
-  /order/ship/{id}:
+  /orders/ship/{id}:
     put:
       consumes:
       - application/json
